statistics job notifications
