# app/controllers/statsController.js
@@ -157,6 +157,11 @@ StatisticsController.updateStatisticsCacheStatus = async function(request, respo
             return response.status(500).json({"message":msg});
         }
 
+        if (operation == 'disable') {
+            // clear the queue jobs
+            statisticsQueue.clearQueues();
+        }
+
         if (operation == 'trigger') {
             // trigger the process
             statisticsQueue.triggerCache();
@@ -365,143 +370,78 @@ StatisticsController.clearRepertoireCache = async function(request, response) {
 StatisticsController.statsNotify = async function(req, res) {
     var context = 'StatisticsController.statsNotify';
     var msg = null;
+    var cache_uuid = req.params.cache_uuid;
+    var job_status = req.query.status;
+    var job_event = req.query.event;
+    var job_error = req.query.error;
 
-    config.log.info(context, 'Received LRQ notification id: ' + req.params.notify_id);
+    config.log.info(context, 'Received statistics job notification id: ' + cache_uuid
+                    + ', status: ' + job_status + ', event: ' + job_event + ', error: ' + job_error);
 
     // return a response
     res.status(200).json({"message":"notification received."});
 
-    // search for metadata item based on notification id
-
-    // verify that metadata is valid, owned by vdj, job had error?
-
-    // check job is FINISHED
-
-    // submit finish queue job to cache statistics
-
-/*
-    // search for metadata item based on notification id
-    var lrq_id = req.body['result']['_id']
-    console.log(lrq_id);
-    var metadata = await agaveIO.getAsyncQueryMetadata(lrq_id)
-        .catch(function(error) {
-            msg = 'VDJ-ADC-ASYNC-API ERROR (asyncNotify): Could not get metadata for LRG id: ' + lrq_id + ', error: ' + error;
-            console.error(msg);
-            webhookIO.postToSlack(msg);
-            return Promise.reject(new Error(msg));
-        });
-
-    // do some error checking
-    console.log(metadata);
-    if (metadata.length != 1) {
-        msg = 'VDJ-ADC-ASYNC-API ERROR (asyncNotify): Expected single metadata entry but got ' + metadata.length + ' for LRG id: ' + lrq_id;
-        console.error(msg);
-        webhookIO.postToSlack(msg);
-        return Promise.reject(new Error(msg));
-    }
-    metadata = metadata[0];
-    if (metadata['uuid'] != req.params.notify_id) {
-        msg = 'Notification id and LRQ id do not match: ' + req.params.notify_id + ' != ' + metadata['uuid'];
-        console.error(msg);
-        webhookIO.postToSlack(msg);
-        return Promise.reject(new Error(msg));
-    }
-
-    if (metadata['value']['status'] == 'COUNTING') {
-        // if this is a count query
-        // get the count
-        var filename = config.lrqdata_path + 'lrq-' + metadata["value"]["lrq_id"] + '.json';
-        var countFail = false;
-        var count_obj = await readCountFile(filename)
-            .catch(function(error) {
-                msg = 'VDJ-ADC-ASYNC-API ERROR (asyncNotify): Could not read count file (' + filename + ') for LRQ ' + metadata["uuid"] + '.\n' + error;
-                console.error(msg);
-                webhookIO.postToSlack(msg);
-                countFail = true;
-                console.log(countFail);
-                console.log(metadata);
-                //return Promise.reject(new Error(msg));
-            });
-        console.log('fall through');
-        console.log(metadata);
-        console.log(countFail);
-        console.log(count_obj);
-
-        // error if the count is greater than max size
-        if (countFail || (count_obj['total_records'] > config.async.max_size)) {
-            console.log('got here');
-            metadata['value']['status'] = 'ERROR';
-            if (countFail) {
-                metadata['value']['message'] = 'Could not read count file';
-            } else {
-                metadata['value']['message'] = 'Result size (' + count_obj['total_records'] + ') is larger than maximum size (' + config.async.max_size + ')';
-            }
-            msg = 'VDJ-ADC-ASYNC-API ERROR (asyncNotify): Query rejected: ' + metadata["uuid"] + ', ' + metadata['value']['message'];
-            console.error(msg);
-            webhookIO.postToSlack(msg);
-
-            await agaveIO.updateMetadata(metadata['uuid'], metadata['name'], metadata['value'], null)
-                .catch(function(error) {
-                    msg = 'VDJ-ADC-ASYNC-API ERROR (asyncNotify): Could not update metadata for LRQ ' + metadata["uuid"] + '.\n' + error;
-                    console.error(msg);
-                    webhookIO.postToSlack(msg);
-                    return Promise.reject(new Error(msg));
-                });
-
-            if (metadata["value"]["notification"]) {
-                var notify = asyncQueue.checkNotification(metadata);
-                if (notify) {
-                    var data = asyncQueue.cleanStatus(metadata);
-                    await agaveIO.sendNotification(notify, data)
-                        .catch(function(error) {
-                            var cmsg = 'VDJ-ADC-ASYNC-API ERROR (countQueue): Could not post notification.\n' + error;
-                            console.error(cmsg);
-                            webhookIO.postToSlack(cmsg);
-                        });
-                }
-            }
-            return Promise.resolve();
-        }
-
-        // update metadata status
-        metadata['value']['count_lrq_id'] = metadata['value']['lrq_id'];
-        metadata['value']['status'] = 'COUNTED';
-        await agaveIO.updateMetadata(metadata['uuid'], metadata['name'], metadata['value'], null)
-            .catch(function(error) {
-                msg = 'VDJ-ADC-ASYNC-API ERROR (asyncNotify): Could not update metadata for LRQ ' + metadata["uuid"] + '.\n' + error;
-                console.error(msg);
-                webhookIO.postToSlack(msg);
-                return Promise.reject(new Error(msg));
-            });
-
-        // otherwise submit the real query
-        submitQueue.add({metadata: metadata});
-
+    // only care about the end states
+    if ((job_status != 'FINISHED') && (job_status != 'FAILED'))
         return Promise.resolve();
 
-    } else {
-        if (req.body['status'] == 'FINISHED') {
-            metadata['value']['status'] = 'PROCESSING';
-            metadata['value']['raw_file'] = req.body['result']['location'];
-        } else {
-            // TODO: what else besides FINISHED?
-            metadata['value']['status'] = req.body['status'];
-        }
-
-        // update with additional info
-        // TODO: should we retry on error?
-        var new_metadata = await agaveIO.updateMetadata(metadata['uuid'], metadata['name'], metadata['value'], null)
-            .catch(function(error) {
-                msg = 'VDJ-ADC-ASYNC-API ERROR (countQueue): Could not update metadata for LRQ ' + metadata["uuid"] + '.\n' + error;
-                console.error(msg);
-                webhookIO.postToSlack(msg);
-            });
-
-        if (new_metadata) {
-            // submit queue job to finish processing
-            finishQueue.add({metadata: new_metadata});
-        }
+    // search for metadata item based on notification id
+    var metadata = await tapisIO.getMetadata(cache_uuid)
+        .catch(function(error) {
+            msg = config.log.error(context, 'Could not get cache uuid: ' + cache_uuid + ', error: ' + error);
+        });
+    if (msg) {
+        webhookIO.postToSlack(msg);
+        return Promise.resolve();
     }
-*/
+
+    // verify that metadata is valid, owned by vdj, job had error?
+    if (! metadata) {
+        msg = config.log.error(context, 'could not retrieve cache entry.');
+        webhookIO.postToSlack(msg);
+        return Promise.resolve();
+    }
+
+    // valid type?
+    if (metadata['name'] != 'statistics_cache_repertoire') {
+        msg = config.log.error(context, 'Cache uuid: ' + cache_uuid + ' is not statistics_cache_repertoire');
+        webhookIO.postToSlack(msg);
+        return Promise.resolve();
+    }
+
+    // have job?
+    if (! metadata['value']['statistics_job_id']) {
+        msg = config.log.error(context, 'Cache uuid: ' + cache_uuid + ' does not have statistics job id');
+        webhookIO.postToSlack(msg);
+        return Promise.resolve();
+    }
+
+    // check job
+    let job_entry = await tapisIO.getJobOutput(metadata['value']['statistics_job_id'])
+        .catch(function(error) {
+            msg = config.log.error(context, 'error' + error);
+        });
+    if (msg) {
+        webhookIO.postToSlack(msg);
+        return Promise.resolve();
+    }
+
+    if (! job_entry) {
+        msg = config.log.error(context, 'Cache uuid: ' + cache_uuid + ' has invalid statistics job id: ' + metadata['value']['statistics_job_id']);
+        webhookIO.postToSlack(msg);
+        return Promise.resolve();
+    }
+
+    // correct job status?
+    if (job_entry['status'] != job_status) {
+        msg = config.log.error(context, 'Cache uuid: ' + cache_uuid + ' has job status that does not match notification,  '
+                               + job_entry['status'] + ' != ' + job_status);
+        webhookIO.postToSlack(msg);
+        return Promise.resolve();
+    }
+
+    // submit finish queue job to cache statistics
+    statisticsQueue.finishStatistics(cache_uuid);
+
     return Promise.resolve();
 }
